--- a/Sets_Venn_diagram.ipynb
+++ b/Sets_Venn_diagram.ipynb
@@ -298,6 +298,287 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "({2, 3, 4, 5, 6}, {0, 2, 4, 6})"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A,B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "({0, 2, 3, 4, 5, 6}, {0, 2, 3, 4, 5, 6})"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A|B, A.union(B)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "({2, 4, 6}, {2, 4, 6})"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A&B, A.intersection(B)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "({3, 5}, {3, 5})"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A-B, A.difference(B)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0, 3, 5}"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A.symmetric_difference(B)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cartesian Product"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from itertools import product"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Face = set(range(11)) | set({'J','Q','K'})\n",
+    "Suits = {'♠', '♦', '♥', '♣'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, '♠')\n",
+      "(0, '♣')\n",
+      "(0, '♦')\n",
+      "(0, '♥')\n",
+      "(1, '♠')\n",
+      "(1, '♣')\n",
+      "(1, '♦')\n",
+      "(1, '♥')\n",
+      "(2, '♠')\n",
+      "(2, '♣')\n",
+      "(2, '♦')\n",
+      "(2, '♥')\n",
+      "(3, '♠')\n",
+      "(3, '♣')\n",
+      "(3, '♦')\n",
+      "(3, '♥')\n",
+      "(4, '♠')\n",
+      "(4, '♣')\n",
+      "(4, '♦')\n",
+      "(4, '♥')\n",
+      "(5, '♠')\n",
+      "(5, '♣')\n",
+      "(5, '♦')\n",
+      "(5, '♥')\n",
+      "(6, '♠')\n",
+      "(6, '♣')\n",
+      "(6, '♦')\n",
+      "(6, '♥')\n",
+      "(7, '♠')\n",
+      "(7, '♣')\n",
+      "(7, '♦')\n",
+      "(7, '♥')\n",
+      "(8, '♠')\n",
+      "(8, '♣')\n",
+      "(8, '♦')\n",
+      "(8, '♥')\n",
+      "(9, '♠')\n",
+      "(9, '♣')\n",
+      "(9, '♦')\n",
+      "(9, '♥')\n",
+      "(10, '♠')\n",
+      "(10, '♣')\n",
+      "(10, '♦')\n",
+      "(10, '♥')\n",
+      "('Q', '♠')\n",
+      "('Q', '♣')\n",
+      "('Q', '♦')\n",
+      "('Q', '♥')\n",
+      "('J', '♠')\n",
+      "('J', '♣')\n",
+      "('J', '♦')\n",
+      "('J', '♥')\n",
+      "('K', '♠')\n",
+      "('K', '♣')\n",
+      "('K', '♦')\n",
+      "('K', '♥')\n"
+     ]
+    }
+   ],
+   "source": [
+    "for card in product(Face, Suits):\n",
+    "    print(card)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10}"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set(range(11))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A = {1, 2, 3, 4, 5}\n",
+    "B = {0, 2, -6, 5, 8, 9}\n",
+    "U = A|B|{-3, 7, 10, -4}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{-6, 0, 1, 2, 3, 4, 5, 8, 9}"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A|B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{-6, -4, -3, 0, 1, 2, 3, 4, 5, 7, 8, 9, 10}"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "U"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
