--- a/Sets_Venn_diagram.ipynb
+++ b/Sets_Venn_diagram.ipynb
@@ -521,61 +521,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
-    "A = {1, 2, 3, 4, 5}\n",
-    "B = {0, 2, -6, 5, 8, 9}\n",
-    "U = A|B|{-3, 7, 10, -4}\n"
+    "A = {-6,3,4,5}\n",
+    "B = {-6,5,13}\n",
+    "U = A|B|{12,-2,-4}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 109,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def cartesian_prod(A,B):\n",
+    "    r = set()\n",
+    "    for i in A:\n",
+    "        for j in B:\n",
+    "            r |= {(i,j)}\n",
+    "    return(r)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{-6, 0, 1, 2, 3, 4, 5, 8, 9}"
+       "{(-6, -6),\n",
+       " (-6, 5),\n",
+       " (-6, 13),\n",
+       " (3, -6),\n",
+       " (3, 5),\n",
+       " (3, 13),\n",
+       " (4, -6),\n",
+       " (4, 5),\n",
+       " (4, 13),\n",
+       " (5, -6),\n",
+       " (5, 5),\n",
+       " (5, 13)}"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "A|B"
+    "cartisian_prod(A,B)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 98,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{-6, -4, -3, 0, 1, 2, 3, 4, 5, 7, 8, 9, 10}"
-      ]
-     },
-     "execution_count": 98,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "U"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
