--- a/Bernoulli_Distribution.ipynb
+++ b/Bernoulli_Distribution.ipynb
@@ -174,14 +174,25 @@
     "collapsed": true
    },
    "source": [
-    "### See also:"
+    "### Related Distributions:\n",
+    "<ul>\n",
+    "<li>Bernoulli distribution is a special case of the Binomial distribution where a single trial is conducted (so n would be 1 for such a binomial distribution). </li>\n",
+    "<li>Bernoulli distribution is also a special case of the two-point distribution, for which the possible outcomes need not be 0 and 1.</li>\n",
+    "<li>Categorical Distribution is the generalization of the Bernoulli distribution for variables with any constant number of discrete values.</li>\n",
+    "<li>Beta Distribution is the conjugate prior of the Bernoulli distribution.</li>\n",
+    "<li>Geometric Distribution models the number of independent and identical Bernoulli trials needed to get one success.</li>\n",
+    "</ul>\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "source": [
-    "The Bernoulli distribution is a special case of the Binomial distribution where a single trial is conducted (so n would be 1 for such a binomial distribution). It is also a special case of the two-point distribution, for which the possible outcomes need not be 0 and 1."
+    "The relationship of Bernoulli Distribution and Binorminal Distribution is like give birth to a child and many children, say Girl is success and Boy is a failure :-) "
    ]
   },
   {
