--- a/Binomial_Distribution.ipynb
+++ b/Binomial_Distribution.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -152,9 +152,18 @@
    },
    "source": [
     "<H1> Binomial Distribution </H1>\n",
-    "<H3> A unfair coin with probability of Head is p, success is 1, fail is 0</H3> \n",
-    "\n",
-    "$$E[x]= np, \\sigma = \\sqrt{np(1-p)}$$"
+    "<H3> A unfaired coin with probability of Head is $p$, trialed independently $n$ times, $k$ successes</H3> \n",
+    "### PMF: $B_{p,n}(k) = {n\\choose k}p^k(1-p)^{n-k}$,<br>\n",
+    "#### Why: the probalility of $k$ successes is $p^k$, $n-k$ failure is $(n-k)^{1-p}$, for every k-success sequence, there are ${n\\choose k}$ sequences."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$X\\sim B_{p,n}  \\quad X = \\sum_{i=1}^n{X_i}  \\quad X_1,...,X_n \\sim B_p  \\quad X_i\\perp X_j \\quad 0<i,j<n \\quad i,j \\in N$\n",
+    "### $E[X]= E[\\sum_{i=1}^n{X_i}] = \\sum_{i=1}^n {E[X_i]} = \\sum_{i=1}^n {p} = np$              <br> \n",
+    "$Var(X) = Var(\\sum_{i=1}^n{X_i}) = \\sum_{i=1}^n{Var(X_i)} = np(1-p)  \\quad \\sigma = \\sqrt{npq}$"
    ]
   },
   {
@@ -266,14 +275,77 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "751228d436684307b7f2d7a5bdfcca8c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "A Jupyter Widget"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.plot_pmf>"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import ipywidgets as widgets\n",
+    "from scipy import stats\n",
+    "\n",
+    "def plot_pmf(n, p):\n",
+    "    '''\n",
+    "    Plot PMF of Binom(n, p)\n",
+    "    n: number of trial\n",
+    "    p: probalility\n",
+    "    '''\n",
+    "    k = np.arange(0, n + 1)\n",
+    "    p_k = stats.binom.pmf(k, n, p)\n",
+    "    plt.plot(k, p_k, '-x', color='b')\n",
+    "\n",
+    "    plt.title(f'PMF of Binormial Dsitribution $B({p},{n})$')\n",
+    "    plt.xlabel('Number of successes: k')\n",
+    "    plt.ylabel('Probability of k successes')\n",
+    "    #     axes = plt.gca() #Get the Current Axes instance  \n",
+    "    #     axes.set_xlim([0, n+1])\n",
+    "    #     axes.set_ylim([0, 1.1 * max(p_k)])\n",
+    "    plt.show()\n",
+    "\n",
+    "\n",
+    "widgets.interact(\n",
+    "    plot_pmf,\n",
+    "    n = widgets.IntSlider(min=0, max=50, step=1, value=25),\n",
+    "    p = widgets.FloatSlider(min=0, max=1, step=0.01, value=0.5))\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
    "source": [
     "# Related Distributions: \n",
-    "The Bernoulli Distribution is a special case of the Binomial Distribution, where number of experiment n = 1. <br>\n",
-    "Poission Distribution can be seen as divided into infinity number of small intervals, each interval is Bernoulli Distribution."
+    "<ul><li>The Bernoulli Distribution is a special case of the Binomial Distribution, where number of experiment n = 1. <br> \n",
+    "<li>Poission Distribution can be seen as divided into infinity number of small intervals, each interval is Bernoulli Distribution. Poisson process is a continuous version of Bernoulli process.\n",
+    "<li>When n is large, and p is small (usually n>50, np < 5), Binormial Distribution can be approximated by Possion Distribution. \n",
+    "<ul>Why need approximation? 1) The factorials and exponential can become problemetic to calculate and have round off error when n is very large; 2) sometimes, n and/or p is not known, only know mean of occurence $\\lambda$.</ul>\n",
+    "<li>In Bernoulli process, the inter-arrival time is Geometric Distribution; in the Possion process, the inter-arrival time is Exponential Distribution. (Exponential Distribution is a continous analogue of Geometric Distribution.\n",
+    "<li>Binomial Distribution can also be generialized into Possion Binomial Distribution, in which case, $p_i$ is different in each trial, suppose we know all $p_i$. <br>"
    ]
   },
   {
