--- a/Bernoulli_Distribution.ipynb
+++ b/Bernoulli_Distribution.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -26,7 +26,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -34,8 +34,7 @@
    "source": [
     "from IPython.display import Image\n",
     "img_url = 'https://upload.wikimedia.org/wikipedia/commons/thumb/1/19/Jakob_Bernoulli.jpg/220px-Jakob_Bernoulli.jpg'\n",
-    "Embed = Image(img_url)\n",
-    "Embed "
+    "Image(img_url)"
    ]
   },
   {
@@ -53,8 +52,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "or $ f(k;p) = \\large \\{ _{q \\quad if \\quad k=0} ^{p \\quad if  \\quad  k=1}$ "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 82,
    "metadata": {
     "collapsed": true
    },
