--- a/Exponential Distribution.ipynb
+++ b/Exponential Distribution.ipynb
@@ -77,6 +77,79 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from scipy.stats import expon\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = expon.rvs(scale =72000, size=1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAA2oAAAHVCAYAAACAKAiCAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMi4zLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvIxREBQAAGYtJREFUeJzt3W2MpWd93/Hfv14cEGniB6YrC+OO\nERbIlYpJVsSIqA92IIaNsF8gZBQlq9TtvkkqUCOlQyM1ilSh9ZsQoqZIFtBsJMpDHJAtVg11F0dR\npWJYg8OTcb24i2LL9m6MHUgqQU3+fTG36WTZediZOTPXzPl8pKM5932fM/c148v4fLnPuaa6OwAA\nAIzj7+32AAAAAPi7hBoAAMBghBoAAMBghBoAAMBghBoAAMBghBoAAMBghBoAAMBghBoAAMBghBoA\nAMBgDuzkyV72spf14uLiTp4SAABgGA8++OBfdvfCeo/b0VBbXFzMqVOndvKUAAAAw6iqb23kcd76\nCAAAMBihBgAAMBihBgAAMBihBgAAMBihBgAAMBihBgAAMBihBgAAMBihBgAAMBihBgAAMBihBgAA\nMBihBgAAMBihBgAAMBihBgAAMBihBgAAMBihBgAAMBihBgAAMBihBgAAMBihBgAAMBihxnz5r0vL\ntxXu/PydufPzd+7SgBjFU+99b55673t3exgAAEmSA7s9ANhRT33lR3Z949vf2IWBMJrvPWweAADj\ncEUNAABgMEINAABgMEINAABgMEINAABgMEINAABgMEINAABgMEINAABgMEINAABgMEINAABgMEIN\nAABgMEINAABgMEINAABgMEINAABgMEINAABgMEINAABgMEINAABgMEINAABgMEINAABgMEINAABg\nMEINAABgMEINAABgMEINAABgMEINAABgMOuGWlW9uqoeWnH7TlW9u6quqKr7qurR6evlOzFgAACA\n/W7dUOvuR7r7hu6+IclPJ/k/ST6VZCnJye6+LsnJaRsAAIAtuti3Pt6c5Jvd/a0ktyY5Pu0/nuS2\n7RwYAADAvLrYULs9yUen+we7+8np/lNJDl7oCVV1tKpOVdWpc+fObXKYAAAA82PDoVZVlyZ5W5I/\nOv9Yd3eSvtDzuvuu7j7U3YcWFhY2PVAAAIB5cTFX1N6S5Ivd/fS0/XRVXZUk09ez2z04AACAeXQx\nofbO/P+3PSbJvUmOTPePJLlnuwYFAAAwzzYUalX10iRvSvLJFbuPJXlTVT2a5OembQAAALbowEYe\n1N1/k+TK8/Y9k+VVIAEAANhGF7vqIwAAADMm1AAAAAYj1AAAAAYj1AAAAAYj1AAAAAYj1AAAAAYj\n1AAAAAYj1AAAAAYj1AAAAAYj1AAAAAYj1AAAAAYj1AAAAAYj1AAAAAYj1AAAAAYj1AAAAAYj1AAA\nAAYj1AAAAAYj1AAAAAYj1AAAAAYj1AAAAAYj1AAAAAYj1AAAAAYj1AAAAAYj1AAAAAYj1AAAAAYj\n1AAAAAYj1AAAAAYj1AAAAAYj1AAAAAYj1AAAAAYj1AAAAAYj1AAAAAYj1AAAAAYj1AAAAAYj1AAA\nAAYj1AAAAAYj1AAAAAYj1AAAAAYj1AAAAAYj1AAAAAYj1AAAAAYj1AAAAAYj1AAAAAYj1AAAAAZz\nYLcHsNctLp1Y8/iZY4d3aCQAAMB+4YoaAADAYDYUalV1WVXdXVXfqKqHq+oNVXVFVd1XVY9OXy+f\n9WABAADmwUavqL0/yZ9092uSvDbJw0mWkpzs7uuSnJy2AQAA2KJ1Q62qfjLJP0nyoSTp7u9393NJ\nbk1yfHrY8SS3zWqQAAAA82QjV9SuTXIuyX+uqi9V1Qer6qVJDnb3k9Njnkpy8EJPrqqjVXWqqk6d\nO3due0YNAACwj20k1A4k+akkH+ju1yX5m5z3Nsfu7iR9oSd3913dfai7Dy0sLGx1vAAAAPveRkLt\n8SSPd/cD0/bdWQ63p6vqqiSZvp6dzRABAADmy7qh1t1PJfmLqnr1tOvmJF9Pcm+SI9O+I0numckI\nAQAA5sxG/+D1v07ykaq6NMljSX4ly5H3iaq6I8m3krxjNkMEAACYLxsKte5+KMmhCxy6eXuHAwAA\nwEb/jhoAAAA7RKgBAAAMRqgBAAAMRqgBAAAMRqgBAAAMRqgBAAAMRqgBAAAMRqgBAAAMRqgBAAAM\nRqgBAAAMRqgBAAAMRqgBAAAMRqgBAAAMRqgBAAAMRqgBAAAMRqgBAAAMRqgBAAAM5sBuD2C/W1w6\nseqxM8cO7+BIAACAvcIVNQAAgMEINQAAgMEINQAAgMEINQAAgMEINQAAgMEINQAAgMEINQAAgMEI\nNQAAgMEINQAAgMEINQAAgMEINQAAgMEINQAAgMEINQAAgMEINQAAgMEINQAAgMEc2O0BjGBx6cSq\nx84cO7yDIwEAAHBFDQAAYDhCDQAAYDBCDQAAYDBCDQAAYDBCDQAAYDBCDQAAYDBCDQAAYDBCDQAA\nYDBCDQAAYDBCDQAAYDBCDQAAYDBCDQAAYDAHNvKgqjqT5LtJfpDk+e4+VFVXJPl4ksUkZ5K8o7uf\nnc0wAQAA5sfFXFH75919Q3cfmraXkpzs7uuSnJy2AQAA2KKtvPXx1iTHp/vHk9y29eEAAACw0VDr\nJP+tqh6sqqPTvoPd/eR0/6kkB7d9dAAAAHNoQ59RS/Kz3f1EVf2DJPdV1TdWHuzurqq+0BOnsDua\nJNdcc82WBgsAADAPNnRFrbufmL6eTfKpJK9P8nRVXZUk09ezqzz3ru4+1N2HFhYWtmfUAAAA+9i6\noVZVL62qv//C/SRvTvLVJPcmOTI97EiSe2Y1SAAAgHmykbc+Hkzyqap64fH/pbv/pKq+kOQTVXVH\nkm8lecfshgkAADA/1g217n4syWsvsP+ZJDfPYlAAAADzbKOLiTADi0sn1jx+5tjhHRoJAAAwkq38\nHTUAAABmQKgBAAAMRqgBAAAMRqgBAAAMRqgBAAAMRqgBAAAMRqgBAAAMRqgBAAAMRqgBAAAMRqgB\nAAAMRqgBAAAMRqgBAAAMRqgBAAAMRqgBAAAMRqgBAAAMRqgBAAAM5sBuD2B0i0sndnsIAADAnHFF\nDQAAYDBCDQAAYDBCDQAAYDBCDQAAYDBCDQAAYDBCDQAAYDBCDQAAYDBCDQAAYDBCDQAAYDBCDQAA\nYDBCDQAAYDBCDQAAYDBCDQAAYDBCDQAAYDBCDQAAYDBCDQAAYDBCDQAAYDBCDQAAYDBCDQAAYDBC\nDQAAYDBCDQAAYDAHdnsArG5x6cSax88cO7xDIwEAAHaSK2oAAACDEWoAAACDEWoAAACDEWoAAACD\nEWoAAACDEWoAAACDEWoAAACD2XCoVdUlVfWlqvr0tH1tVT1QVaer6uNVdenshgkAADA/LuaK2ruS\nPLxi+84k7+vuVyV5Nskd2zkwAACAebWhUKuqq5McTvLBabuS3JTk7ukhx5PcNosBAgAAzJuNXlH7\n3SS/keRvp+0rkzzX3c9P248nefmFnlhVR6vqVFWdOnfu3JYGCwAAMA/WDbWq+oUkZ7v7wc2coLvv\n6u5D3X1oYWFhM98CAABgrhzYwGPemORtVfXWJC9O8hNJ3p/ksqo6MF1VuzrJE7MbJgAAwPxY94pa\nd7+nu6/u7sUktyf5bHf/YpL7k7x9etiRJPfMbJQAAABzZCt/R+3fJvk3VXU6y59Z+9D2DAkAAGC+\nbeStjz/U3X+a5E+n+48lef32D4mNWlw6seqxM8cO78p5Z31uAACYB1u5ogYAAMAMCDUAAIDBCDUA\nAIDBCDUAAIDBCDUAAIDBXNSqj+wdVmYEAIC9yxU1AACAwQg1AACAwQg1AACAwQg1AACAwVhMZE6t\ntdiIhUYAAGB3uaIGAAAwGKEGAAAwGKEGAAAwGKEGAAAwGKEGAAAwGKEGAAAwGKEGAAAwGKEGAAAw\nGKEGAAAwGKEGAAAwGKEGAAAwGKEGAAAwGKEGAAAwGKEGAAAwGKEGAAAwGKEGAAAwGKEGAAAwGKEG\nAAAwGKEGAAAwGKEGAAAwGKEGAAAwGKEGAAAwGKEGAAAwGKEGAAAwGKEGAAAwGKEGAAAwGKEGAAAw\nmAO7PQD2n8WlE6seO3Ps8A6OBAAA9iZX1AAAAAYj1AAAAAYj1AAAAAYj1AAAAAYj1AAAAAZj1Ud+\nxFqrNu7mua0YCQDAvHBFDQAAYDDrhlpVvbiqPl9Vf15VX6uq3572X1tVD1TV6ar6eFVdOvvhAgAA\n7H8buaL2vSQ3dfdrk9yQ5JaqujHJnUne192vSvJskjtmN0wAAID5sW6o9bK/njZfNN06yU1J7p72\nH09y20xGCAAAMGc29Bm1qrqkqh5KcjbJfUm+meS57n5+esjjSV6+ynOPVtWpqjp17ty57RgzAADA\nvrahUOvuH3T3DUmuTvL6JK/Z6Am6+67uPtTdhxYWFjY5TAAAgPlxUas+dvdzSe5P8oYkl1XVC8v7\nX53kiW0eGwAAwFzayKqPC1V12XT/JUnelOThLAfb26eHHUlyz6wGCQAAME828gevr0pyvKouyXLY\nfaK7P11VX0/ysar6D0m+lORDMxwnAADA3Fg31Lr7y0led4H9j2X582oAAABso4v6jBoAAACzJ9QA\nAAAGI9QAAAAGI9QAAAAGI9QAAAAGs5Hl+WEIi0sn1jx+5tjhXTn3LM8LAMB8ckUNAABgMEINAABg\nMEINAABgMEINAABgMEINAABgMFZ9ZG4sLp3Ixy59Jkly+4pVHF9yzTO58ZVX7tawAADgR7iiBgAA\nMBihBgAAMBihBgAAMBihBgAAMBihBgAAMBihBgAAMBihBgAAMBihBgAAMBihBgAAMBihBgAAMJgD\nuz0AGMHnHnsmi0sndnsYAACQxBU1AACA4Qg1AACAwQg1AACAwQg1AACAwVhMBLZovUVIzhw7vEMj\nAQBgv3BFDQAAYDBCDQAAYDBCDQAAYDBCDQAAYDBCDQAAYDBCDQAAYDBCDQAAYDBCDQAAYDBCDQAA\nYDBCDQAAYDBCDQAAYDBCDQAAYDBCDQAAYDBCDQAAYDBCDQAAYDBCDQAAYDAHdnsAzJfFpRO7PQQA\nABieK2oAAACDWTfUquoVVXV/VX29qr5WVe+a9l9RVfdV1aPT18tnP1wAAID9byNX1J5P8uvdfX2S\nG5P8alVdn2Qpycnuvi7JyWkbAACALVo31Lr7ye7+4nT/u0keTvLyJLcmOT497HiS22Y1SAAAgHly\nUZ9Rq6rFJK9L8kCSg9395HToqSQHV3nO0ao6VVWnzp07t4WhAgAAzIcNh1pV/XiSP07y7u7+zspj\n3d1J+kLP6+67uvtQdx9aWFjY0mABAADmwYZCrapelOVI+0h3f3La/XRVXTUdvyrJ2dkMEQAAYL5s\nZNXHSvKhJA939++sOHRvkiPT/SNJ7tn+4QEAAMyfjfzB6zcm+aUkX6mqh6Z9/y7JsSSfqKo7knwr\nyTtmM0QAAID5sm6odff/SFKrHL55e4cDAADARa36CAAAwOwJNQAAgMEINQAAgMEINQAAgMEINQAA\ngMFsZHl+2BMWl07s9hAAAGBbuKIGAAAwGKEGAAAwGKEGAAAwGKEGAAAwGKEGAAAwGKs+Ahe01iqa\nZ44d3sGRAADMH1fUAAAABiPUAAAABiPUAAAABiPUAAAABiPUAAAABiPUAAAABiPUAAAABiPUAAAA\nBiPUAAAABiPUAAAABnNgtwcA825x6cSqx84cO7yDI9k+a/1Myd79uQAAdooragAAAIMRagAAAIMR\nagAAAIMRagAAAIOxmAhw0dZbLAQAgK1xRQ0AAGAwQg0AAGAwQg0AAGAwQg0AAGAwQg0AAGAwVn2E\nga23uuKZY4d3aCQAAOwkV9QAAAAGI9QAAAAGI9QAAAAGI9QAAAAGI9QAAAAGY9VH2MPWWhXSipAA\nAHuXK2oAAACDEWoAAACDEWoAAACDEWoAAACDsZgIzNhaC37s5nn36mIjFlABAOaBK2oAAACDWTfU\nqurDVXW2qr66Yt8VVXVfVT06fb18tsMEAACYHxu5ovYHSW45b99SkpPdfV2Sk9M2AAAA22DdUOvu\nP0vy7fN235rk+HT/eJLbtnlcAAAAc2uzn1E72N1PTvefSnJwm8YDAAAw97a86mN3d1X1aser6miS\no0lyzTXXbPV0ALtiv66iCQCMabNX1J6uqquSZPp6drUHdvdd3X2ouw8tLCxs8nQAAADzY7Ohdm+S\nI9P9I0nu2Z7hAAAAsJHl+T+a5H8meXVVPV5VdyQ5luRNVfVokp+btgEAANgG635Grbvfucqhm7d5\nLAAAAGQbFhMBYG3rLUSyHguVAMD82exn1AAAAJgRoQYAADAYoQYAADAYoQYAADAYoQYAADAYqz4C\nQ9nKColbee6djz2TG1955aafDwCwnVxRAwAAGIxQAwAAGIxQAwAAGIxQAwAAGIzFRGBObWXhDQAA\nZssVNQAAgMEINQAAgMEINQAAgMEINQAAgMEINQAAgMFY9RFg8rnHnsk/tRomADAAV9QAAAAGI9QA\nAAAGI9QAAAAGI9QAAAAGYzERAJgsrrOYzJljh2fyvbfyffeqWf6uAfYDV9QAAAAGI9QAAAAGI9QA\nAAAGI9QAAAAGI9QAAAAGY9VHYMett9obO2Orq+5tZRXDWa6AuB9XV9yrKyT6dx1g81xRAwAAGIxQ\nAwAAGIxQAwAAGIxQAwAAGIzFRAC2gUUT/q55/H3M4888S/txURiAi+GKGgAAwGCEGgAAwGCEGgAA\nwGCEGgAAwGCEGgAAwGCs+giwh83jSoNb+Zn36+9rKyskzuq57B9W4ITd4YoaAADAYIQaAADAYIQa\nAADAYIQaAADAYCwmAjC43VqwYd7OuxGzGtssf+b9uPjKVsc1ywUwtjK2tcY1y38WW/l97OY/i/24\nyMl6v8+9+nOtZSs/837/fbmiBgAAMBihBgAAMJgthVpV3VJVj1TV6apa2q5BAQAAzLNNh1pVXZLk\n95O8Jcn1Sd5ZVddv18AAAADm1VauqL0+yenufqy7v5/kY0lu3Z5hAQAAzK/q7s09sertSW7p7n85\nbf9Skp/p7l8773FHkxydNl+d5JHND3dmXpbkL3d7ELBNzGf2E/OZ/cacZj8xnzfnH3b3wnoPmvny\n/N19V5K7Zn2eraiqU919aLfHAdvBfGY/MZ/Zb8xp9hPzeba28tbHJ5K8YsX21dM+AAAAtmArofaF\nJNdV1bVVdWmS25Pcuz3DAgAAmF+bfutjdz9fVb+W5DNJLkny4e7+2raNbGcN/dZMuEjmM/uJ+cx+\nY06zn5jPM7TpxUQAAACYjS39wWsAAAC2n1ADAAAYzFyHWlXdUlWPVNXpqlra7fEw36rqw1V1tqq+\numLfFVV1X1U9On29fNpfVfV709z9clX91IrnHJke/2hVHVmx/6er6ivTc36vqmqtc8BWVNUrqur+\nqvp6VX2tqt417Ten2ZOq6sVV9fmq+vNpTv/2tP/aqnpgmocfnxZYS1X92LR9ejq+uOJ7vWfa/0hV\n/fyK/Rd8XbLaOWCrquqSqvpSVX162jafBzK3oVZVlyT5/SRvSXJ9kndW1fW7Oyrm3B8kueW8fUtJ\nTnb3dUlOTtvJ8ry9brodTfKBZPkFapLfSvIzSV6f5LdWvEj9QJJ/teJ5t6xzDtiK55P8endfn+TG\nJL86/W+sOc1e9b0kN3X3a5PckOSWqroxyZ1J3tfdr0rybJI7psffkeTZaf/7psdl+vfg9iT/KMtz\n9j9NL5bXel2y2jlgq96V5OEV2+bzQOY21LL8H/zT3f1Yd38/yceS3LrLY2KOdfefJfn2ebtvTXJ8\nun88yW0r9v9hL/tcksuq6qokP5/kvu7+dnc/m+S+LL+YuCrJT3T353p5BaE/PO97XegcsGnd/WR3\nf3G6/90svxB4ecxp9qhpbv71tPmi6dZJbkpy97T//Dn9wjy8O8nN01XfW5N8rLu/193/O8npLL8m\nueDrkuk5q50DNq2qrk5yOMkHp+215pr5vAvmOdRenuQvVmw/Pu2DkRzs7ien+08lOTjdX23+rrX/\n8QvsX+scsC2mt8i8LskDMafZw6YrBQ8lOZvl/9Pgm0me6+7np4esnIc/nLvT8b9KcmUufq5fucY5\nYCt+N8lvJPnbaXutuWY+74J5DjXYU6arBjP9exo7cQ7mS1X9eJI/TvLu7v7OymPmNHtNd/+gu29I\ncnWWrxi8ZpeHBJtSVb+Q5Gx3P7jbY2F18xxqTyR5xYrtq6d9MJKnp7d4Zfp6dtq/2vxda//VF9i/\n1jlgS6rqRVmOtI909yen3eY0e153P5fk/iRvyPLbdA9Mh1bOwx/O3en4TyZ5Jhc/159Z4xywWW9M\n8raqOpPltyXelOT9MZ+HMs+h9oUk100rz1ya5Q9C3rvLY4Lz3ZvkhVXujiS5Z8X+X65lNyb5q+mt\nXp9J8uaqunxacOHNST4zHftOVd04vT/8l8/7Xhc6B2zaNM8+lOTh7v6dFYfMafakqlqoqsum+y9J\n8qYsf/by/iRvnx52/px+YR6+Pclnpyu89ya5fVpF79osL4Tz+azyumR6zmrngE3p7vd099XdvZjl\nufbZ7v7FmM9j6e65vSV5a5L/leX3mP/mbo/Hbb5vST6a5Mkk/zfL79m+I8vv5T6Z5NEk/z3JFdNj\nK8urKX0zyVeSHFrxff5Flj/MezrJr6zYfyjJV6fn/MckNe2/4Dnc3LZyS/KzWX7L4ZeTPDTd3mpO\nu+3VW5J/nORL05z+apJ/P+1/ZZZfmJ5O8kdJfmza/+Jp+/R0/JUrvtdvTvP2kSRvWbH/gq9LVjuH\nm9t23JL8sySfnu6bzwPdXviPGgAAAIOY57c+AgAADEmoAQAADEaoAQAADEaoAQAADEaoAQAADEao\nAQAADEaoAQAADOb/AX0lpNifVLiuAAAAAElFTkSuQmCC\n",
+      "text/plain": [
+       "<Figure size 1080x576 with 1 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "plt.figure(figsize=(15,8))\n",
+    "plt.hist(x, bins=100)\n",
+    "x1 = np.mean(x),np.mean(x)\n",
+    "y = 0,75\n",
+    "x2 = 72000,72000\n",
+    "x3 = 144000,144000\n",
+    "\n",
+    "plt.plot(x1,y)\n",
+    "plt.plot(x2,y)\n",
+    "plt.plot(x3,y)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "76271.84962529593"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
